k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-s3-service
spec:
  type: ClusterIP
  selector:
    app: api-s3
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
